# square-python-sdk

./: .fernignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.md  create-release-workflow.yml  pyproject.toml  python-migration-guide.md  reference.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: README.md  customers_delete.py  customers_list.py  pyproject.toml
examples/src/example/: main.py
legacy/: pyproject.toml  requirements.txt
legacy/doc/: client.md  utility-classes.md
legacy/doc/api/: apple-pay.md  bank-accounts.md  booking-custom-attributes.md  bookings.md  cash-drawers.md  checkout.md  customer-custom-attributes.md  customer-groups.md  customer-segments.md  devices.md  disputes.md  employees.md  events.md  gift-card-activities.md  gift-cards.md  location-custom-attributes.md  locations.md  merchant-custom-attributes.md  merchants.md  order-custom-attributes.md  orders.md  snippets.md  subscriptions.md  team.md  terminal.md  transactions.md  vendors.md
legacy/doc/models/: accept-dispute-response.md  accepted-payment-methods.md  accumulate-loyalty-points-request.md  accumulate-loyalty-points-response.md  action-cancel-reason.md  activity-type.md  add-group-to-customer-response.md  address.md  adjust-loyalty-points-response.md  afterpay-details.md  application-details-external-square-product.md  application-type.md  appointment-segment.md  archived-state.md  bank-account-payment-details.md  bank-account-status.md  bank-account-type.md  bank-account.md  batch-change-inventory-request.md  batch-change-inventory-response.md  batch-delete-catalog-objects-request.md  batch-delete-catalog-objects-response.md  batch-retrieve-catalog-objects-response.md  batch-retrieve-inventory-changes-request.md  batch-retrieve-inventory-counts-response.md  batch-retrieve-orders-request.md  batch-retrieve-orders-response.md  batch-upsert-catalog-objects-request.md  batch-upsert-catalog-objects-response.md  booking-creator-details-creator-type.md  booking-creator-details.md  booking-custom-attribute-delete-response.md  booking-custom-attribute-upsert-request.md  booking-custom-attribute-upsert-response.md  booking-status.md  break.md  bulk-create-customers-response.md  bulk-create-vendors-request.md  bulk-create-vendors-response.md  bulk-delete-booking-custom-attributes-response.md  (+723 more)
legacy/examples/: customers_delete.py  customers_list.py
legacy/src/square_legacy/: __init__.py  client.py  configuration.py
legacy/src/square_legacy/api/: apple_pay_api.py  bank_accounts_api.py  base_api.py  booking_custom_attributes_api.py  bookings_api.py  cards_api.py  cash_drawers_api.py  catalog_api.py  checkout_api.py  customer_custom_attributes_api.py  customer_groups_api.py  customer_segments_api.py  customers_api.py  devices_api.py  disputes_api.py  employees_api.py  events_api.py  gift_card_activities_api.py  gift_cards_api.py  inventory_api.py  invoices_api.py  labor_api.py  location_custom_attributes_api.py  locations_api.py  loyalty_api.py  merchant_custom_attributes_api.py  merchants_api.py  mobile_authorization_api.py  o_auth_api.py  order_custom_attributes_api.py  orders_api.py  (+12 more)
legacy/tests/: http_response_catcher.py  test_helper.py
legacy/tests/api/: api_test_base.py  test_catalog_api.py  test_customers_api.py  test_employees_api.py  test_locations_api.py  test_merchants_api.py  test_payments_api.py  test_refunds_api.py  v2_endpoints_tests.py
legacy/tests/utilities/: test_webhooks_helper.py
(+4254 files in other folders)
